--- a/resources/screen-full.less
+++ b/resources/screen-full.less
@@ -125,9 +125,11 @@
 }
 #footer-navigation {
 	padding: 0;
-	margin: 0 -1.5em;
 	font-size: 80%;
 
+	h3 {
+		color: @text-grey;
+	}
 	a {
 		color: @link-grey;
 	}
